# gaitalytics

./: .gitignore  MANIFEST.in  README.md  README.rst  pyproject.toml
.github/workflows/: manual_test_library.yaml  on_push_test.yaml  on_tag_release.yaml  test_on_push.yaml
conda.recipe/: meta.yaml  recipe.yaml
docs/: conf.py  index.rst
gaitalytics/: api.py  config.py  events.py  features.py  input.py  io.py  mapping.py  model.py  normalisation.py  segmentation.py  storage.py
gaitalytics/utils/: math.py
tests/: test_api.py  test_configs.py  test_events.py  test_features.py  test_input.py  test_io.py  test_mapping.py  test_model.py  test_normalisation.py  test_segementation.py  test_storage.py  utils.py
tests/config/: hbm2_config.yaml  pig_config.yaml
tests/data/: test_healthy.mot  test_healthy.trc  test_small.trc  test_small_mokka.trc
