[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "gaitalytics"
dynamic = ["version"]
description = "easy gait-metrics for everyone"
authors = [{ name = "André Böni", email = "andre.boeni@llui.org" }]
requires-python = ">= 3.12"
dependencies = ["netcdf4", "pandas", "tables", "h5py", "pyyaml", "scipy"]

[tool.setuptools_scm]

[project.optional-dependencies]
test = ["pytest", "pytest-cov", "cleanpy", "pip", "pandas-stubs", "ruff", "mypy"]
build = ["twine", "setuptools", "setuptools_scm", "build", "cleanpy"]
docs = ["sphinx", "sphinx-rtd-theme", "sphinx-autodoc-typehints", "sphinx_github_changelog"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["win-64", "linux-64"]

[tool.pixi.pypi-dependencies]
gaitalytics = { path = ".", editable = true }

[tool.pixi.dependencies]
pyomeca = ">=2021.0.1,<2021.1"
pixi-pycharm = ">=0.0.6,<0.1"


# Environments
[tool.pixi.environments]
default = { solve-group = "default" }
test = { features = ["test"], solve-group = "default" }
build = { features = ["build"], solve-group = "default" }
docs = { features = ["docs"], solve-group = "default" }

[tool.pixi.feature.docs.tasks]
clean-docs = "cleanpy --include-builds --exclude .pixi ."
docs = "sphinx-build -M html ./docs ./docs/_build -W --keep-going"

[tool.pixi.feature.test.tasks]
clean-test = "cleanpy --include-testing --exclude .pixi ."
test = "pytest -vv --cov=gaitalytics --cov-report=term-missing --cov-config=.coveragerc --capture=sys"
mypy = "mypy gaitalytics --check-untyped-defs"
ruff-check = "ruff check gaitalytics --fix"
ruff-format = "ruff format gaitalytics"

[tool.pixi.feature.build.tasks]
clean-build = "cleanpy --include-builds --include-metadata --exclude .pixi ."
build = "python -m build"

[tool.setuptools.packages.find]
include = ["gaitalytics*"]
exclude = ["docs*", "tests*"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff-lint]
select = [
    "E", "F", "B", "UP", "D"
]
pydocstyle = "google"

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = "True"



