[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "gaitalytics"
dynamic = ["version"]
description = "easy gait-metrics for everyone"
authors = [{ name = "André Böni", email = "andre.boeni@llui.org" }]
requires-python = ">= 3.12"
dependencies = []

[tool.setuptools_scm]

[project.optional-dependencies]
dev = ["cleanpy", "pandas-stubs", "ruff", "mypy"]
test = ["pytest", "pytest-cov"]
build = ["twine", "build", "cleanpy"]
docs = ["sphinx", "sphinx-rtd-theme", "sphinx-autodoc-typehints", "sphinx_github_changelog"]

[tool.pixi.project]
channels = ["default", "conda-forge"]
platforms = ["win-64", "linux-64", "osx-64", "osx-arm64"]

[tool.pixi.pypi-dependencies]
gaitalytics = { path = ".", editable = true }
netcdf4 = ">=1.5.7,<1.8"

[tool.pixi.dependencies]
pyomeca = ">=2021.0.1,<2021.1"
pandas = ">=2.2.2,<2.3"
pyyaml = ">=6.0.1,<6.1"
scipy = ">=1.14.0,<1.15"
numpy = ">=1.26.4,<2.1"
ezc3d = { version = ">=1.5.10,<1.6", build = "*python*" }
xarray = ">=2024.6.0,<2024.7"
pixi-pycharm = ">=0.0.6,<0.1"

# Environments
[tool.pixi.environments]
default = {features = ["test", "dev", "py312"], solve-group = "default" }
build = { features = ["build", "py312"], solve-group = "default" }
docs = { features = ["docs", "py312"], solve-group = "default" }
py312 = { features = ["py312", "test"], solve-group = "default" }

[tool.pixi.feature.py310.dependencies]
python = ">=3.10,<3.11"

[tool.pixi.feature.py311.dependencies]
python = ">=3.11,<3.12"

[tool.pixi.feature.py312.dependencies]
python = ">=3.12,<3.13"

[tool.pixi.feature.docs.tasks]
clean-docs = "cleanpy --include-builds --exclude .pixi ."
docs = "sphinx-build -M html ./docs ./docs/_build -W --keep-going"

[tool.pixi.tasks]
clean-test = "cleanpy --include-testing --exclude .pixi ."
test = "pytest -vv --cov=gaitalytics --cov-report=term-missing --cov-config=.coveragerc --capture=sys"
ruff-format = "ruff format gaitalytics"
ruff-check = {cmd="ruff check gaitalytics --fix", depends-on=["ruff-format"]}
check-code = {cmd="mypy gaitalytics --check-untyped-defs", depends-on=["ruff-check"]}

[tool.pixi.feature.build.tasks]
clean-build = "cleanpy --include-builds --include-metadata --exclude .pixi ."
build = "python -m build"

[tool.setuptools.packages.find]
include = ["gaitalytics*"]
exclude = ["docs*", "tests*"]


[tool.ruff-lint]
select = [
    "E", "F", "B", "UP", "D"
]
pydocstyle = "google"

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = "True"



